<resources>
    <string name="app_name">UPevents</string>
    <string name="sign_up" />
    <string name="login" />
    <string name="tod" />
    <string name="username" />
    <string name="password" />
    <string name="textview">TextView</string>
    <string name="get_it">Get it</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="textviews">TextView</string>
    <string name="contact">Contact</string>
    <string name="_20dt">20dt</string>
    <string name="todo">TODO</string>
    <string name="omarzouiter_gmail_com">omarZouiter@gmail.com</string>
    <string name="location">Location:</string>
    <string name="sousse_sahloul">Sousse,Sahloul</string>
    <string name="create_by">Create by</string>
    <string name="price">Price:</string>
    <string name="date">Date:</string>
    <string name="le_groupe_epi_ne_se_limite_pas_accompagner_les_tudiants_tout_au_long_de_leur_parcours_acad_mique_mais_il_veille_leur_embauche_et_leur_insertion_professionnelle_c_est_dans_ce_cadre_que_le_club_enactus_epi_organise_une_journ_e_d_employabilit">Le groupe EPI ne se limite pas à accompagner les étudiants tout au long de leur parcours académique mais il veille à leur embauche et à leur insertion professionnelle. C’est dans ce cadre que le club ENACTUS EPI organise « Une journée d’employabilité »</string>
    <string name="timeeeee">TextView</string>
    <string name="creeeeet">TextView</string>
    <string name="createuuuuuur">createuuuuuur</string>
    <string name="pricee">price</string>
    <string name="already_have">already have!</string>
    <string name="re_password">re-password</string>
    <string name="to">TODO</string>
    <string name="sign_upp">sign up</string>
    <string name="sign_uppp">Sign Up</string>
    <string name="usernamee">userName</string>
    <string name="passwordd">password</string>
    <string name="emaill">Email</string>
    <string name="share">Share</string>
</resources>