<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bginfo"


    tools:context=".info">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="350dp"
        android:layout_height="148dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img">

        <ImageView
            android:id="@+id/imgi"
            android:layout_width="360dp"
            android:layout_height="138dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="-3dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/namei"
            android:layout_width="341dp"
            android:layout_height="wrap_content"

            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="#4B8E7A1A"
            android:fontFamily="@font/bungee_shade"
            android:text="@string/textview"
            android:textAlignment="center"
            android:textColor="#F8F6F5"
            android:textSize="37sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </RelativeLayout>

    <Button
        android:id="@+id/part"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/brr"
        android:text="@string/share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="423dp"
        android:layout_height="326dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="70dp"
        android:background="#00FFFFFF"
        android:fillViewport="true"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:text="@string/create_by"
                android:textColor="#011DB3"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/crt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/namew"
                android:text="@string/createuuuuuur"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/desc"
                android:layout_width="344dp"
                android:layout_height="100dp"
                android:layout_marginStart="38dp"
                android:layout_marginTop="16dp"
                android:background="#8600B8D4"
                android:fontFamily="@font/baumans"
                android:text="@string/le_groupe_epi_ne_se_limite_pas_accompagner_les_tudiants_tout_au_long_de_leur_parcours_acad_mique_mais_il_veille_leur_embauche_et_leur_insertion_professionnelle_c_est_dans_ce_cadre_que_le_club_enactus_epi_organise_une_journ_e_d_employabilit"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/round">


                <ImageView

                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/daticon" />

                <TextView

                    android:id="@+id/ttmm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/b612_mono"
                    android:text="@string/date"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView


                    android:id="@+id/wak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="250dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/b612_mono"
                    android:text="@string/date"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/round">

                <ImageView

                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/locicon" />

                <TextView

                    android:id="@+id/loc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/b612_mono"
                    android:text="@string/sousse_sahloul"
                    android:textColor="#CFD8DC"
                    android:textSize="17sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/round">

                <ImageView

                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/priceicon" />

                <TextView


                    android:id="@+id/pri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/b612_mono"
                    android:text="@string/pricee"

                    android:textColor="#CFD8DC"
                    android:textSize="17sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/round">

                <ImageView

                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/emailicon" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/b612_mono"
                    android:text="@string/price"

                    android:textColor="@color/white"
                    android:textSize="19sp" />


            </FrameLayout>

            <FrameLayout
                android:id="@+id/call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/round">

                <ImageView

                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/phonicon" />

                <TextView


                    android:id="@+id/phon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/b612_mono"
                    android:text="@string/phone"

                    android:textColor="#CFD8DC"
                    android:textSize="17sp" />
            </FrameLayout>


        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/img"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"

        android:layout_marginTop="40dp"

        android:contentDescription="@string/tod"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/cat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="14dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>