<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bghome"


    tools:context=".siginup">

    <com.google.android.material.textfield.TextInputLayout


        android:id="@+id/usernamed"
        android:layout_width="311dp"
        android:layout_height="61dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imsi">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/usernamm"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:hint="@string/usernamee"
            android:textColorHint="#6C6868"


            tools:ignore="TextContrastCheck,TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imsi"
        android:layout_width="88dp"
        android:layout_height="76dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sigin"
        app:srcCompat="@drawable/ic_baseline_perm_media_24" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ruser"
        android:layout_width="311dp"
        android:layout_height="61dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernamed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/us"
            android:layout_width="match_parent"

            android:layout_height="match_parent"
            android:hint="@string/emaill"
            android:textColorHint="#6C6868"
            android:background="#00000000"


            tools:ignore="TextContrastCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView

        android:id="@+id/sigin"
        android:layout_width="332dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/baloo_paaji"
        android:text="GET ON BOARD"

        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textDirection="firstStrongLtr"
        android:textSize="35sp"

        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button

        android:id="@+id/sn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="219dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round"

        android:text="@string/sign_upp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rpass" />

    <TextView


        android:id="@+id/have"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/brr"
        android:minHeight="48dp"

        android:padding="10dp"
        android:text="@string/already_have"
        android:textColor="#08CBED"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.716"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sn" />

    <ImageButton

        android:id="@+id/rim"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/to"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passw"
        android:layout_width="311dp"
        android:layout_height="61dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ruser"
        app:passwordToggleEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ps"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/passwordd"
            android:textColorHint="#616161"

            android:background="#00000000"

            android:inputType="textPassword"
             />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rpass"
        android:layout_width="311dp"
        android:layout_height="61dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passw"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/re_password"
            android:textColorHint="#6C6868"
            android:background="#00000000"

            android:inputType="textPassword"
            tools:ignore="TextContrastCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>